# rk3588-ai-companion

./: .gitignore  README.md
cloud-model/: .gitignore  CLAUDE.md  aec_filter.py  book_match_client.py  chat.py  config.py  debug_runtime.py  dialog_debug.py  main.py  reading_mode.py  recognizer.py  synthesizer.py  test_book_match_client.py  test_debug_runtime.py  test_interrupt.py  test_interrupt_auto.py  test_kws_sensitivity.py  test_reading_mode.py  test_vlm_tts.py  test_voice_control_words.py  test_voice_dialog_debug.py  voice_dialog_debug.py
cloud-model/arm/: agent_client.py  test_agent_client.py
cloud-model/asr/: kws_keywords.txt  recognizer.py  test_asr.py  test_recognizer_turn_detector_integration.py  test_turn_detector.py  turn_detector.py
cloud-model/audio/: aec_bridge.cpp  aec_filter.py  echo_cancel.py  fillers.py
cloud-model/dashboard/: __init__.py  chassis_control.py  (+15 more)
cloud-model/safety_guard_native/: CMakeLists.txt  README.md  build_native.sh  rknn_yolo.cpp  rknn_yolo.h  safety_rknn_lib.cpp  safety_rknn_lib.h
docs/: ASSET_RESTORE_GUIDE.md  DEPENDENCY_LICENSE_AUDIT.md  OMITTED_LARGE_ASSETS.txt  PUBLIC_RELEASE_NOTES.md
ros2/: .gitignore  ROS_READING_MODE_FIX_TODO.md  setup_ros2.sh  setup_rplidar.sh  start_reading_arm.sh  stop_reading_arm.sh  test_reading_arm_scripts.sh
ros2/src/depth_camera_perception/: package.xml  setup.cfg  setup.py
ros2/src/depth_camera_perception/config/: person_follow_params.yaml
ros2/src/depth_camera_perception/depth_camera_perception/: depth_utils.py  face_identity_adapter.py  fused_pose.py  fused_pose_monitor_node.py  identity_tracking.py  obstacle_avoidance.py  obstacle_guard_node.py  obstacle_web_monitor_node.py  obstacle_web_utils.py  perception_smoke_test.py  person_detector.py  person_follow.py  person_follow_node.py  person_seek.py  person_seek_node.py  person_speed_alert_node.py  person_speed_monitor.py  person_web_monitor_node.py  pose_person_detector.py  web_monitor_utils.py
ros2/src/depth_camera_perception/launch/: fused_pose_monitor.launch.py  obstacle_guard.launch.py  obstacle_web_monitor.launch.py  perception_smoke_test.launch.py  person_follow.launch.py  person_seek.launch.py  person_speed_alert.launch.py  person_web_monitor.launch.py
ros2/src/depth_camera_perception/test/: test_depth_utils.py  test_face_identity_adapter.py  test_fused_pose.py  test_identity_seek_real_robot_script.py  test_identity_tracking.py  test_obstacle_avoidance.py  test_obstacle_web_monitor_node.py  test_obstacle_web_utils.py  test_person_detector.py  test_person_follow.py  test_person_seek.py  test_person_speed_monitor.py  test_pose_person_detector.py  test_web_monitor_utils.py
ros2/src/face_track/: package.xml  setup.cfg  setup.py
ros2/src/face_track/config/: servo_params.yaml  servo_params.yaml.new
ros2/src/face_track/face_track/: arm_agent.py  arm_agent_core.py  book_detector.py  book_servo_bridge.py  face_detector.py  keyboard_direction_jog.py  keyboard_face_info.py  servo_controller.py  test_arm_agent_core.py  test_arm_agent_debug.py  test_keyboard_direction_jog.py  test_keyboard_face_info.py  test_servo_state_machine.py
ros2/src/face_track/launch/: face_track.launch.py
ros2/src/map_preprocess/: package.xml  setup.cfg  setup.py
ros2/src/map_preprocess/launch/: navigate.launch.py  preprocess.launch.py
ros2/src/map_preprocess/map_preprocess/: preprocessor.py  waypoint_navigator.py
ros2/src/simple_nav/: package.xml  setup.py
ros2/src/simple_nav/launch/: simple_nav.launch.py
ros2/src/simple_nav/simple_nav/: map_publisher.py  simple_navigator.py  timestamp_bridge.py  wheel_odom.py
(+431 files in other folders)
