<?xml version="1.0"?>
<package format="3">
  <name>face_track</name>
  <version>0.1.0</version>
  <description>MediaPipe face detection + visual servo for RoArm-M2-S</description>
  <maintainer email="elf@example.com">elf</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
