<?xml version="1.0"?>
<package format="3">
  <name>map_preprocess</name>
  <version>0.0.0</version>
  <description>Map preprocessing: obstacle bounding boxes + waypoint graph</description>
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>Apache-2.0</license>
  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>python3-numpy</depend>
  <export><build_type>ament_python</build_type></export>
</package>
