<?xml version="1.0"?>
<package format="3">
  <name>simple_nav</name>
  <version>0.0.0</version>
  <description>Bug2 planner + fixed-speed controller for Yahboom ROS2 car</description>
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>python3-numpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
